@@ -83,7 +83,7 @@
         <!-- Attribute -->
     <tr>
         <td bgcolor="#eeeeee" valign="top" align="left">
-          <font color="#000000" size="-1" face="arial,helvetica,sanserif">additionalmodules</font>
+          <font color="#000000" size="-1" face="arial,helvetica,sanserif">additionalmodules - note that your version of vjc may not support this option.</font>
         </td>
         <td bgcolor="#eeeeee" valign="top" align="left">
           <font color="#000000" size="-1" face="arial,helvetica,sanserif">Semicolon separated list of modules to refer to.</font>
@@ -444,7 +444,7 @@
   <tr>
     <td>
       <div align="center"><font color="#525D76" size="-1"><em>
-        Copyright &copy; 2000-2004, The Apache Software Foundation. All Rights Reserved.
+        Copyright &copy; 2000-2005, The Apache Software Foundation. All Rights Reserved.
       </em></font></div>
     </td>
   </tr>
